# dotfiles

./: README.md  TODO.md  __stat__  dots.yml  merge_pkg.py  package.list  pyproject.toml  settings.yaml  spot  spot.py  x
data/boot/loader/entries/: arch.conf
data/etc/: pacman.conf
data/etc/pacman.d/: mirrorlist-archlinuxcn
data/etc/systemd/: system.conf
data/home/pu/: .xinitrc  .zshrc
data/home/pu/.config/: birdtray-config.json  mimeapps.list  screenkey.json
data/home/pu/.config/dunst/: dunstrc
data/home/pu/.config/dwm/: autostart.sh
data/home/pu/.config/fcitx5/conf/: classicui.conf  cloudpinyin.conf  pinyin.conf
data/home/pu/.config/flameshot/: flameshot.ini
data/home/pu/.config/neofetch/: config.conf
data/home/pu/.config/nnn/: .lastd
data/home/pu/.config/nvim/: ginit.vim  init.lua
data/home/pu/.config/nvim/plugin/: keymap.lua  packer_compiled.lua
data/home/pu/.config/pcmanfm/default/: pcmanfm.conf
data/home/pu/.config/picom/: picom.conf
data/home/pu/.config/qt5ct/: qt5ct.conf
data/home/pu/.config/qt5ct/colors/: Gruvbox-Dark.conf
data/home/pu/.config/ranger/: rc.conf  scope.sh
data/home/pu/.ssh/: config
modules/: file.py  parse.py
src/: merge_pkg.py  spot.py
src/data/boot/loader/: loader.conf
src/data/etc/X11/xorg.conf.d/: 30-touchpad.conf
src/data/etc/pacman.d/: mirrorlist
src/data/home/pu/: .Xmodmap  .gtkrc-2.0  .zlogin
src/data/home/pu/.config/: starship.toml
src/data/home/pu/.config/clipit/: clipitrc
src/modules/: config.py  file.py  pacman.py  parser.py  utils.py  web_drive.py
(+23 files in other folders)
